<resources>
    <string name="app_name">Weather</string>
    <string name="metric_unics">Metric units</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="sunny">Sunny</string>
    <string name="default_temp" translatable="false">0 °C</string>
    <string name="default_weather">Sunny</string>
    <string name="default_wind">Wind: 0 m/s</string>
    <string name="default_date">18 November, 1.34</string>
    <string name="default_feels_like">Feels like 0 °C</string>
    <string name="details">Details</string>
    <string name="default_city" translatable="false">Tampere, FI</string>
    <string name="feels_like">Feels like</string>
    <string name="default_humidity">Humidity: 60 %</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="icon_credit">App icon created by umartvurdu https://www.flaticon.com/free-icons/wind</string>
    <string name="sun_credits">Sunrise and sunset icons created by Mehwish https://www.flaticon.com/free-icons/sunset</string>
    <string name="volley_error">Unable to find city or network error. Please try again later.</string>
    <string name="empty_location_error">Please enter a location</string>
</resources>